--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include("partial/head.ejs") %>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
+        <div class="container-fluid ">
           <a class="navbar-brand" href="#">Blog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
                 <a class="nav-link active" href="/contact">contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active"href="/Work">Work with me</a>
+                <a class="nav-link active"href="/Instagram">Instagram</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -25,15 +25,20 @@
           </div>
         </div>
       </nav>
-    
-      <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary bg-image img-fluid " >
-        <div class="col-lg-6 px-0" >
+    <!-- below is hero area -->
+    <main class="container " style="margin-top: 50px;">
+      <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary d-flex align-items-center ">
+        <div class="col-lg-6 px-0">
           <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
           <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-          <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+          <p class="lead mb-0"><a href="/create" class="text-body-emphasis fw-bold">Start a new one </a></p>
+        </div>
+      <div class="col-lg-6">
+          <img src="/images/7419559.jpg" class="img-fluid rounded float-end" alt="pole">
         </div>
       </div>
-
+    
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
 </body>
